# splunk-github-sbom

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  test.sh
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  dependabot_auto_merge.yml  docker-publish.yml  integration_tests.yml.disabled  rust_checks.yml  rust_test.yml  test_thyself.yml
examples/: action-to-readme.rs
src/: main.rs
