[package]
name = "splunk-github-sbom"
description = "Send your SBOM data to a Splunk instance via the HTTP Event Collector endpoint."
version = "0.1.1"
edition = "2021"
rust-version = "1.67"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["serde_json", "json"] }

splunk = { version="0.1.1-alpha4", features = ["hec"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }

[dev-dependencies]
regex = "1.10.2"
serde_yaml = "0.9.27"
