[package]
name = "splunk-github-sbom"
description = "Send your SBOM data to a Splunk instance via the HTTP Event Collector endpoint."
version = "0.1.1"
edition = "2021"
rust-version = "1.67"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.26", features = ["serde_json", "json"] }

splunk = { version="0.1.1-alpha4", features = ["hec"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[dev-dependencies]
regex = "1.10.3"
serde_yaml = "0.9.33"
