[package]
name = "splunk-github-sbom"
description = "Send your SBOM data to a Splunk instance via the HTTP Event Collector endpoint."
version = "0.1.1"
edition = "2021"
rust-version = "1.67"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.11.27", features = ["serde_json", "json"] }

splunk = { version="0.1.1-alpha4", features = ["hec"] }
tokio = { version = "1.38.1", features = ["rt", "macros"] }

[dev-dependencies]
regex = "1.10.6"
serde_yaml = "0.9.34"
